* Improve performance of derive() operations to compensate for the
  regression introduced in HARP 1.26.

* harpdump --dataset and .pth files can now contain string values between
  double quotes to store filenames with a comma in them (which is applicable
  for MTG and EPS-SG products such as Sentinel-4 and Sentinel-5).

* Updates to product ingestions:
  - GEOMS SONDE: added support for GEOMS-TE-SONDE-O3-003.
  - GOSAT FTS L2: added XCH4/XCO2 variables to ingestion.
  - S5P L2: added land_fraction variable for AAI/ALH/CH4/CO/FRESCO/NO2/O3PR.
  - S5P L2 AER_AI: added s354_388nm_scm option + cloud/albedo variables.
  - S5P L2 FRESCO: added scene_height variables.
  - Sentinel-5 L2: fixed structure and values of datetime variables.

1.26 2025-07-09
~~~~~~~~~~~~~~~

* Added support for Sentinel-5 L2.

* Added derivations to retrieve (dry) air column number density from
  species column number density and species (dry air) volume mixing ratio.

* Added derivations to treat vertical profiles of volume mixing ratios
  and partial column profiles of column volume mixing ratios as equal.

* Added 'invalid()' operation to allow filtering on invalid values.

* Fixed memory corruption issue in rebinning algorithm.

* Fixed issue where 'index(dimension)' operation would not get applied
  correctly when reading data via an ingestion module, the dimension for
  the index filter was not time, and it was combined with another filter.

* Updates to product ingestions:
  - EarthCARE L1: fixed TIR band ingestion options for MSI_NOM_1B.
  - EarthCARE L2: fixed typo in variable name for MSI_AOT_2A.
  - S5P L1B: added systematic and random uncertainty variables.
  - S5P L2 O3 TCL: fixed unit of mixing ratios (ppbv -> ppv).

1.25 2025-03-16
~~~~~~~~~~~~~~~

* The rebin() operation now takes into account existing weight variables
  and properly handles angle variables. Rebinning the result of a
  bin_spatial() operation to a lower resolution now gives the same result