@@ -177,60 +177,63 @@
 <tr class="row-odd"><td><p><em>description</em></p></td>
 <td><p>convert hours since 00:00:00 of the day of the measurement to seconds since 2000-01-01</p></td>
 </tr>
-<tr class="row-even"><td><p><strong>sensor_latitude</strong></p></td>
+<tr class="row-even"><td rowspan="2"><p><strong>sensor_latitude</strong></p></td>
 <td><p><em>path</em></p></td>
 <td><p><strong>/latitude</strong></p></td>
 </tr>
-<tr class="row-odd"><td><p><strong>sensor_longitude</strong></p></td>
+<tr class="row-odd"><td><p><em>description</em></p></td>
+<td><p>in case the variable is an array, the mid point will be taken</p></td>
+</tr>
+<tr class="row-even"><td rowspan="2"><p><strong>sensor_longitude</strong></p></td>
 <td><p><em>path</em></p></td>
 <td><p><strong>/longitude</strong></p></td>
 </tr>
-<tr class="row-even"><td><p><strong>sensor_altitude</strong></p></td>
+<tr class="row-odd"><td><p><em>description</em></p></td>
+<td><p>in case the variable is an array, the mid point will be taken</p></td>
+</tr>
+<tr class="row-even"><td rowspan="2"><p><strong>sensor_altitude</strong></p></td>
 <td><p><em>path</em></p></td>
 <td><p><strong>/altitude</strong></p></td>
 </tr>
-<tr class="row-odd"><td rowspan="2"><p><strong>altitude</strong></p></td>
+<tr class="row-odd"><td><p><em>description</em></p></td>
+<td><p>in case the variable is an array, the mid point will be taken</p></td>
+</tr>
+<tr class="row-even"><td><p><strong>altitude</strong></p></td>
 <td><p><em>path</em></p></td>
 <td><p><strong>/height</strong></p></td>
-</tr>
-<tr class="row-even"><td><p><em>description</em></p></td>
-<td><p>height above mean see level</p></td>
 </tr>
 <tr class="row-odd"><td><p><strong>cloud_type</strong></p></td>
 <td><p><em>path</em></p></td>
 <td><p><strong>/target_classification</strong></p></td>
 </tr>
-<tr class="row-even"><td rowspan="2"><p><strong>cloud_type_validity</strong></p></td>
+<tr class="row-even"><td><p><strong>cloud_type_validity</strong></p></td>
 <td><p><em>path</em></p></td>
 <td><p><strong>/detection_status</strong></p></td>
 </tr>
-<tr class="row-odd"><td><p><em>description</em></p></td>
-<td><p>radar and lidar detection status</p></td>
-</tr>
-<tr class="row-even"><td rowspan="4"><p><strong>cloud_base_height</strong></p></td>
+<tr class="row-odd"><td rowspan="4"><p><strong>cloud_base_height</strong></p></td>
 <td><p><em>path</em></p></td>
 <td><p><strong>/cloud_base_height</strong></p></td>
 </tr>
-<tr class="row-odd"><td><p><em>description</em></p></td>
+<tr class="row-even"><td><p><em>description</em></p></td>
 <td><p>legacy format</p></td>
 </tr>
-<tr class="row-even"><td><p><em>path</em></p></td>
+<tr class="row-odd"><td><p><em>path</em></p></td>
 <td><p><strong>/cloud_base_height_amsl</strong></p></td>
 </tr>
-<tr class="row-odd"><td><p><em>description</em></p></td>
+<tr class="row-even"><td><p><em>description</em></p></td>
 <td><p>cloudnetpy format</p></td>
 </tr>
-<tr class="row-even"><td rowspan="4"><p><strong>cloud_top_height</strong></p></td>
+<tr class="row-odd"><td rowspan="4"><p><strong>cloud_top_height</strong></p></td>
 <td><p><em>path</em></p></td>
 <td><p><strong>/cloud_top_height</strong></p></td>
 </tr>
-<tr class="row-odd"><td><p><em>description</em></p></td>
+<tr class="row-even"><td><p><em>description</em></p></td>
 <td><p>legacy format</p></td>
 </tr>
-<tr class="row-even"><td><p><em>path</em></p></td>
+<tr class="row-odd"><td><p><em>path</em></p></td>
 <td><p><strong>/cloud_top_height_amsl</strong></p></td>
 </tr>
-<tr class="row-odd"><td><p><em>description</em></p></td>
+<tr class="row-even"><td><p><em>description</em></p></td>
 <td><p>cloudnetpy format</p></td>
 </tr>
 </tbody>
